--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,14 @@
+html{
+  height:100%;
+  margin: 0;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 /* Global variables for a consistent & clean design */
 :root{
