--- a/client/src/css/auth.module.css
+++ b/client/src/css/auth.module.css
@@ -1,9 +1,5 @@
-html{
-  height:100%;
-  margin: 0;
-}
-body{
-  height:100%;
+.container{
+  height:100vh;
   display:flex;
   flex-direction: column;
   align-items: center;
@@ -16,31 +12,30 @@ body{
   background-size: cover;
 }
 
-div.overlay{
+.overlay{
   background-color: var(--blue);
   width:100%;
   height:100%;
   position: absolute;
-  z-index:-1;
+  z-index:0;
   opacity: .3;
 }
 
-form {
+.form {
   display:flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: green;
-  padding:8px 24px;
+  padding:32px 32px;
   width:380px;
+  z-index: 1;
 }
 
-h1{
-  font-weight: 200 !important;
-  margin-bottom: 40px !important;
+.img{
+  margin-bottom:24px
 }
 
-span#blue {
+.blue {
   color:var(--blue);
   margin-left:var(--size-1);
 }
