--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,3 +29,8 @@ body {
         /* prussian blue */
   --dblue: #1d3557ff;
 }
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
