--- a/client/src/css/tires.module.css
+++ b/client/src/css/tires.module.css
@@ -6,6 +6,11 @@
 
 .header {
   margin-left:8px;
+  font-size:var(--size-3);
+  font-weight: 300;
+  letter-spacing: 2px;
+  margin-left: 8px;
+  margin-right:auto;
 }
 
 .logo {
