--- a/client/src/css/tires.module.css
+++ b/client/src/css/tires.module.css
@@ -2,6 +2,16 @@
   width:100vw;
   height: 100vh;
   background-color: var(--white);
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  padding:16px;
+}
+
+.bar{
+  width:70%;
+  box-shadow: none;
+  outline: 1px solid lightgray;
 }
 
 .header {
@@ -13,10 +23,8 @@
   margin-right:auto;
 }
 
-.logo {
-
+.table {
+  width:70%;
+  flex:1;
 }
 
-.car {
-
-}
